# SwiftKeyDB

./: .gitignore  CMakeLists.txt  test.cpp  text
.github/workflows/: c-cpp.yml
include/: Database.h  DatabaseManager.h  List.h
src/: Database.cpp  DatabaseManager.cpp  List.cpp  main.cpp
